removed all swarm refs, stripped eeprom programs to meet midi len

--- a/bB101_VCO.ioc
+++ b/bB101_VCO.ioc
@@ -303,8 +303,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=bB100_Swarm.ioc
-ProjectManager.ProjectName=bB100_Swarm
+ProjectManager.ProjectFileName=bB100_Vco.ioc
+ProjectManager.ProjectName=bB100_Vco
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
