--- a/bB101_VCO.ioc
+++ b/bB101_VCO.ioc
@@ -118,19 +118,20 @@ KeepUserPlacement=false
 Mcu.Family=STM32G4
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
-Mcu.IP10=TIM7
-Mcu.IP11=TIM16
-Mcu.IP12=USB
-Mcu.IP13=USB_DEVICE
+Mcu.IP10=TIM6
+Mcu.IP11=TIM7
+Mcu.IP12=TIM16
+Mcu.IP13=USB
+Mcu.IP14=USB_DEVICE
 Mcu.IP2=DAC1
 Mcu.IP3=DMA
 Mcu.IP4=I2C1
 Mcu.IP5=NVIC
 Mcu.IP6=RCC
-Mcu.IP7=SPI1
-Mcu.IP8=SYS
-Mcu.IP9=TIM6
-Mcu.IPNb=14
+Mcu.IP7=RNG
+Mcu.IP8=SPI1
+Mcu.IP9=SYS
+Mcu.IPNb=15
 Mcu.Name=STM32G431K(6-8-B)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PF0-OSC_IN
@@ -152,20 +153,21 @@ Mcu.Pin22=PB6
 Mcu.Pin23=PB7
 Mcu.Pin24=PB8-BOOT0
 Mcu.Pin25=VP_DAC1_VS_DACI2
-Mcu.Pin26=VP_SYS_VS_Systick
-Mcu.Pin27=VP_SYS_VS_DBSignals
-Mcu.Pin28=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin29=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin26=VP_RNG_VS_RNG
+Mcu.Pin27=VP_SYS_VS_Systick
+Mcu.Pin28=VP_SYS_VS_DBSignals
+Mcu.Pin29=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin3=PA0
-Mcu.Pin30=VP_TIM16_VS_ClockSourceINT
-Mcu.Pin31=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin30=VP_TIM7_VS_ClockSourceINT
+Mcu.Pin31=VP_TIM16_VS_ClockSourceINT
+Mcu.Pin32=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin4=PA1
 Mcu.Pin5=PA2
 Mcu.Pin6=PA3
 Mcu.Pin7=PA4
 Mcu.Pin8=PA6
 Mcu.Pin9=PA7
-Mcu.PinsNb=32
+Mcu.PinsNb=33
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G431KBTx
@@ -186,7 +188,7 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.USB_LP_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.USB_LP_IRQn=true\:1\:0\:true\:false\:true\:false\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA0.GPIOParameters=GPIO_Label
 PA0.GPIO_Label=RVAR5
@@ -303,14 +305,14 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=bB100_Vco.ioc
-ProjectManager.ProjectName=bB100_Vco
+ProjectManager.ProjectFileName=bB101_VCO.ioc
+ProjectManager.ProjectName=bB101_VCO
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_TIM16_Init-TIM16-false-HAL-true,7-MX_DAC1_Init-DAC1-false-HAL-true,8-MX_TIM6_Init-TIM6-false-HAL-true,9-MX_USB_Device_Init-USB_DEVICE-false-HAL-false,10-MX_ADC2_Init-ADC2-false-HAL-true,11-MX_TIM7_Init-TIM7-false-HAL-true,12-MX_ADC1_Init-ADC1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_TIM16_Init-TIM16-false-HAL-true,7-MX_DAC1_Init-DAC1-false-HAL-true,8-MX_TIM6_Init-TIM6-false-HAL-true,9-MX_USB_Device_Init-USB_DEVICE-false-HAL-false,10-MX_ADC2_Init-ADC2-false-HAL-true,11-MX_TIM7_Init-TIM7-false-HAL-true,12-MX_ADC1_Init-ADC1-false-HAL-true,13-MX_RNG_Init-RNG-false-HAL-true
 RCC.ADC12Freq_Value=170000000
 RCC.AHBFreq_Value=170000000
 RCC.APB1Freq_Value=170000000
@@ -386,6 +388,8 @@ USB_DEVICE.VirtualMode=Cdc
 USB_DEVICE.VirtualModeFS=Cdc_FS
 VP_DAC1_VS_DACI2.Mode=DAC_OUT2_Int
 VP_DAC1_VS_DACI2.Signal=DAC1_VS_DACI2
+VP_RNG_VS_RNG.Mode=RNG_Activate
+VP_RNG_VS_RNG.Signal=RNG_VS_RNG
 VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
 VP_SYS_VS_DBSignals.Signal=SYS_VS_DBSignals
 VP_SYS_VS_Systick.Mode=SysTick
